Basic structure and styling setup, and start to build up nav.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,15 @@
 // bower:scss
+@import "bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
+@import "bower_components/neat/app/assets/stylesheets/_neat.scss";
 // endbower
 
+@import "variables",
+        "base/base",
+        "base/typography",
+        "layout",
+        "modules/logo",
+        "modules/nav",
+        "components/dashes";
 
 .browsehappy {
     margin: 0.2em 0;
