A big batch of styling and functionality

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -23,6 +23,7 @@ body {
 
 h1 {
     @include lora-font;
+    font-weight: normal;
 }
 
 h2 {
@@ -35,4 +36,5 @@ nav {
 
 strong {
     @include lora-font-bold;
+    font-weight: 700;
 }
